@@ -112,21 +112,30 @@ public class SwarmTest {
                                  .map(m -> new Seed(m.getIdentifier().getIdentifier(), "0"))  // Use OS dynamic port allocation
                                  .limit(largeTests ? 100 : 10)
                                  .toList();
-        // Use larger bootstrap set for large tests: 15 nodes provide observer diversity
-        // to reduce OUT_OF_RANGE collisions during 85 simultaneous joins
+        // Use larger bootstrap set for concurrent joins: more bootstrap nodes reduce
+        // OUT_OF_RANGE collisions when many nodes join simultaneously
+        // CI: 1 node bootstrap (resource-constrained); Large: 15 nodes handle 85 joiners
         final int bootstrapCount = largeTests ? 15 : 1;
         final var bootstrapSeeds = seeds.subList(0, bootstrapCount);
 
         final var gossipDuration = Duration.ofMillis(largeTests ? 150 : 5);
 
-        // Start initial bootstrap kernel
-        var countdown = new AtomicReference<>(new CountDownLatch(bootstrapCount));
-        for (int i = 0; i < bootstrapCount; i++) {
-            var bootstrapSeed = i == 0 ? Collections.<Seed>emptyList() : List.of(seeds.get(0));
-            views.get(i).start(() -> countdown.get().countDown(), gossipDuration, bootstrapSeed);
-        }
+        // Bootstrap kernel formation: staged approach for CI, parallel for local/large
+        // CI requires staged start: node 0 must initialize before nodes 1-2 can join
+        var countdown = new AtomicReference<>(new CountDownLatch(1));
+        views.get(0).start(() -> countdown.get().countDown(), gossipDuration, Collections.emptyList());
 
-        assertTrue(countdown.get().await(60, TimeUnit.SECONDS), "Bootstrap kernel did not stabilize");
+        assertTrue(countdown.get().await(IS_CI ? 60 : 30, TimeUnit.SECONDS), "Bootstrap node 0 did not start");
+
+        // Start remaining bootstrap nodes after node 0 is ready
+        if (bootstrapCount > 1) {
+            countdown.set(new CountDownLatch(bootstrapCount - 1));
+            for (int i = 1; i < bootstrapCount; i++) {
+                views.get(i).start(() -> countdown.get().countDown(), gossipDuration, List.of(seeds.get(0)));
+            }
+            assertTrue(countdown.get().await(IS_CI ? 120 : 60, TimeUnit.SECONDS),
+                      "Bootstrap kernel nodes did not join");
+        }
 
         // Wait for bootstrap kernel to stabilize before allowing joins
         var success = Utils.waitForCondition(30_000, 1_000, () -> {
@@ -142,7 +151,7 @@ public class SwarmTest {
         seedJoiners.forEach(v -> v.start(() -> countdown.get().countDown(), gossipDuration, bootstrapSeeds));
 
         // Test that seed joiners completed
-        success = countdown.get().await(largeTests ? 2400 : 60, TimeUnit.SECONDS);
+        success = countdown.get().await(IS_CI ? 120 : (largeTests ? 2400 : 60), TimeUnit.SECONDS);
         var failed = seedJoiners.stream()
                                 .filter(e -> e.getContext().activeCount() != seeds.size())
                                 .map(v -> String.format("%s : %s ", v.getNode().getId(), v.getContext().activeCount()))
@@ -156,7 +165,7 @@ public class SwarmTest {
             views.subList(seeds.size(), views.size())
                  .forEach(v -> v.start(() -> countdown.get().countDown(), gossipDuration, seeds));
 
-            success = countdown.get().await(largeTests ? 2400 : 120, TimeUnit.SECONDS);
+            success = countdown.get().await(IS_CI ? 240 : (largeTests ? 2400 : 120), TimeUnit.SECONDS);
             failed = views.subList(seeds.size(), views.size())
                           .stream()
                           .filter(e -> e.getContext().activeCount() != CARDINALITY)
@@ -176,7 +185,7 @@ public class SwarmTest {
         assertTrue(success, "Views did not start, expected: " + views.size() + " failed: " + failed.size() + " views: "
         + failed);
 
-        success = Utils.waitForCondition(largeTests ? 2400_000 : 120_000, 1_000, () -> {
+        success = Utils.waitForCondition(IS_CI ? 240_000 : (largeTests ? 2400_000 : 120_000), 1_000, () -> {
             return views.stream().filter(view -> view.getContext().activeCount() != CARDINALITY).count() == 0;
         });
 
@@ -287,7 +296,7 @@ public class SwarmTest {
             communications.add(comms);
 
             gateway.start();
-            gateways.add(comms);
+            gateways.add(gateway);
             return new View(context, node, "0", EventValidation.NONE, Verifiers.from(kerl),
                             comms, parameters, gateway, DigestAlgorithm.DEFAULT, metrics);
         }).collect(Collectors.toList());
